tests/specs/lockfile/frozen_lockfile/frozen_new_dep_dynamic_npm.out
Download http://localhost:4260/@denotest/subtract
error: Uncaught (in promise) TypeError: The lockfile is out of date. Run `deno cache --frozen=false` or rerun with `--frozen=false` to update it.
changes:
 5 | -      "npm:@denotest/add@1": "npm:@denotest/add@1.0.0"
 5 | +      "npm:@denotest/add@1": "npm:@denotest/add@1.0.0",
 6 | +      "npm:@denotest/subtract@1": "npm:@denotest/subtract@1.0.0"
11 | -      }
12 | +      },
13 | +      "@denotest/subtract@1.0.0": {
14 | +        "integrity": "[WILDCARD]",
15 | +        "dependencies": {}
16 | +      }
const { subtract } = await import(scheme + "@denotest/subtract@1");
                     ^
    at [WILDCARD]
